<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:text="@string/sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:text="@string/sing_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/MyTheme1"
            android:text="@string/theme_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/MyTheme2"
            android:text="@string/theme_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/MyTheme3"
            android:text="@string/theme_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/MyTheme4"
            android:text="@string/theme_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>


</LinearLayout>